Fixed messages overflow issue in chatbot window

--- a/src/styles/Chatbot.module.css
+++ b/src/styles/Chatbot.module.css
@@ -29,14 +29,15 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(255, 255, 255);
-  height: 75vh;
-  width: 50vh;
+  height: 84vh;
+  width: 54vh;
   border-radius: 10px;
   position: fixed;
-  bottom: 96px;
+  bottom: 12vh;
   right: 20px;
   z-index: 1;
   box-shadow: 0 0 10px 1px rgba(70, 55, 55, 0.3);
+  /* padding: 10px; */
 }
 .chatbotHeader {
   display: flex;
@@ -55,22 +56,37 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-top: -8px;
-  /* justify-content: flex-start; */
+  overflow: auto;
+  height: 100%;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  text-align: left;
+}
+
+.chatbotBody::-webkit-scrollbar {
+  display: none;
+}
+
+.chatbotBody {
+  scrollbar-width: none;
 }
 
 .questionContainer {
   /* display: flex; */
   /* flex-direction: column; */
   max-width: 70%; /* Max width for the container */
+  margin-top: 4px;
 }
 
 .question {
+  margin-top: 0px;
+  margin-bottom: 0px;
   display: inline-block;
   position: relative;
   color: white;
   /* margin-top: -10px; */
-  margin-left: 8px;
+  /* margin-left: 8px; */
   background-color: #16325b;
   border-radius: 10px;
   padding: 6px 10px;
@@ -80,10 +96,14 @@
 
 .optionsContainer {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
   position: relative;
-  margin-left: 8px;
-  gap: 4px;
+  /* margin-left: 8px; */
+  /* margin-right: 8px; */
+  row-gap: 16px;
+  column-gap: 6px;
+  margin-top: 4px;
 }
 
 .option {
@@ -94,13 +114,13 @@
   border-radius: 10px;
   padding: 6px 10px;
   position: relative;
-  margin-top: -10px;
+  margin-top: 0px;
   font-size: 15px;
   transition: background-color 0.3s;
 }
 
 .option:hover {
-  background-color: #ff5722;
+  background-color: #ff6500;
 }
 
 .answer {
@@ -108,14 +128,15 @@
   width: fit-content;
   position: relative;
   color: white;
-  margin-right: 8px;
-  margin-left: 8px;
+  /* margin-right: 8px; */
+  /* margin-left: 8px; */
   background-color: #ff6500;
   border-radius: 10px;
   padding: 6px 10px;
   max-width: 70%;
   font-size: 15px;
   align-self: flex-end;
-  margin-top: 5px;
-  margin-bottom: -10px;
+  margin-top: 4px;
+  margin-bottom: 0px;
+  /* margin-bottom: -10px; */
 }
